--- a/V5/templates/index.html
+++ b/V5/templates/index.html
@@ -658,10 +658,10 @@
 
                     <div style="display:flex; flex-direction:column; gap:10px;">
                         <div class="gesture-card">
-                            <div class="gesture-icon">🖕</div>
+                            <div class="gesture-icon">👎</div>
                             <div class="gesture-info">
-                                <h4>Mode Toggle</h4>
-                                <p>Middle Finger Up</p>
+                                <h4>Windows + D</h4>
+                                <p>Thumbs Down</p>
                             </div>
                         </div>
 
